# pred-market

./: .dockerignore  .env.example  .env.production.example  .gitignore  DESIGN.md  Dockerfile.frontend  PRODUCT.md  README.md  docker-compose.production.yml  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  proxy.ts  railway.backend.json  railway.frontend.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase_1_3_initial.py  0002_phase_4_6_trading.py  0003_phase_7_realtime_analytics.py  0004_watchlist.py  0005_professional_auth_impersonation.py  0006_market_issuance.py  0007_mfa_production_auth.py  0008_beginner_trading_liquidity.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  errors.py  logging.py  public_ids.py  rate_limit.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/modules/admin/: models.py  router.py  schemas.py  service.py
backend/app/modules/analytics/: models.py  router.py  schemas.py  service.py
backend/app/seed/: __init__.py  create_admin.py  dev.py  simulation.py  staging.py
backend/tests/: conftest.py  test_auth.py  test_beginner_liquidity.py  test_config.py  test_health.py  test_market_issuance.py  test_markets.py  test_mfa.py  test_multi_user_market_simulation.py  test_phase_7_realtime_analytics.py  test_production_bootstrap.py  test_suggestions_admin.py  test_trading_wallet_orders_settlement.py  test_watchlist.py
(+298 files in other folders)
